@@ -1,0 +1,6 @@
+WARNING: append-page-content-damaged.pdf: offset 0: file is damaged
+WARNING: append-page-content-damaged.pdf: can't find startxref
+WARNING: Attempting to reconstruct cross-reference table
+checking append-page-content-damaged.pdf
+File is not encrypted
+File is not linearized
